<resources>
    <string name="app_name">WGHelper</string>



    <!--Login Activity -->
    <string name="log_title">Bitte melden Sie sich an mit Ihrem eigenem Namen sowie dem Passwort und der WG_ID, welche Sie von Ihrem WGLeiter erhalten haben!</string>
    <string name="log_user">Nutzername</string>
    <string name="log_wgpasswort">WG Passwort</string>
    <string name="log_btn">Anmelden</string>
    <string name="log_btn_new_WG">Neue WG registrieren</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="log_title_registration">Bitte erstellen Sie hier eine neue WG!</string>
    <string name="log_wg_id">WG_ID</string>


    <!--Registration activity-->
    <string name="log_Teilnehmer">Wie viele Leute wohnen in Ihrer WG?</string>
    <string name="log_WGName">Wie soll Ihre WG heißen?</string>
    <string name="log_Passwort">Welches Passwort soll Ihre WG haben?</string>
    <string name="Passwort">Passwort</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="header_subname">Viel Spaß zusammen in eurer WG! </string>
        <string name="header_subsubname">WGID</string>
    <integer name="header_subsubsubname">1</integer>

    <string name="nav_drawer_kuehlschrank">Kühlschrank</string>
    <string name="nav_drawer_kasse">Kasse</string>
    <string name="nav_drawer_gießme">GießMe</string>
    <string name="nav_drawer_trinkspiele">Trinkspiele</string>
    <string name="nav_drawer_logout">Ausziehen</string>
    <string name="nav_drawer_settings">Einstellungen</string>
    <string name="set_group_common">Allgemeine Einstellungen</string>
    <string name="set_group_delete">Mitglieder entfernen</string>
    <string name="set_group_number">Mitgliederzahl ändern</string>
    <string name="set_mitglieder">Aktuelle Mitglieder</string>
    <string name="blume1">Palmlilie</string>
    <string name="giessme_btn_new_flower"> + Hinzufügen</string>
    <string name="hzfg_title">Neue Pflanze hinzufügen</string>
    <string name="hzfg_art">Welche Pflanze wird hinzugefügt?</string>
    <string name="hzfg_room">In welchem Zimmer steht die Pflanze?</string>
    <string name="hzfg_wg">Hinzufügen</string>
    <string name="set_group_delete_list">Wen möchten Sie entfernen?</string>
    <string name="set_group_number_question">Wählen Sie die Anzahl an Mitgliedern</string>
    <string name="water_dialog_titel">A Glas Wasser wär it schlecht!</string>
    <string name="water_dialog_ok">OK</string>

    <string name="kasse_wert">Wieviel Geld hast du ausgegeben?</string>
    <string name="kasse_btn">Aktualisieren</string>
    <string name="kasse_btn2">Kontostände</string>

    <!--Kühlschrank activity-->
    <string name="refrig_refresh">Aktualisieren!</string>
    <string name="refrig_hint">Essen</string>
    <string name="refrig_existing">Vorhanden</string>
    <string name="refrig_needed">Nicht Vorhanden</string>
    <string name="refrig_change">Ändern</string>

    <!--POP-UP-Kühlschrank-->
    <string name="Pop_header">Bitte geben Sie das benötigte Lebensmittel ein:</string>
    <string name="Pop_vorhanden">Ist das Lebensmittel vorhanden?</string>
    <string name="Pop_new">Hinzufügen</string>
</resources>
