<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_title_registration"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:gravity="center"
            />


        <TextView
            android:text="@string/log_WGName"
            android:padding="30dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/log_wgname"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <TextView
            android:text="@string/log_Teilnehmer"
            android:layout_gravity="center"
            android:padding="30dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <NumberPicker
            android:id="@+id/log_teilnehmer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center" />
        <TextView
            android:text="@string/log_Passwort"
            android:layout_gravity="center"
            android:padding="30dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/log_passwort"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/log_btn_create_wg"
            android:text="@string/log_btn_new_WG"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



        </LinearLayout>


</android.support.constraint.ConstraintLayout>