<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="de.tum.mw.ftm.praktikum.fahrtenbuch.LoginActivity"
        android:orientation="vertical"
        android:padding="50dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hzfg_title"
            android:layout_margin="3dp"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hzfg_art"
            android:layout_margin="3dp"
            android:textSize="15sp"/>

        <ListView
            android:id="@+id/blumenlist"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_margin="20dp"
            android:clickable="true"/>


        <Button
            android:id="@+id/hzfg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hzfg_wg"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_margin="10dp" />
    </LinearLayout>

</FrameLayout>