<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_title"
                android:padding="10dp"
                android:layout_margin="20dp"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:textAlignment="center"
                />
            <EditText
                android:id="@+id/log_user"
                android:hint="Nutzername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:layout_margin="20dp"
                />
            <EditText
                android:id="@+id/log_wgschluessel"
                android:hint="WGSchlüssel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:layout_margin="20dp"
                />
            <Button
                android:id="@+id/log_btn"
                android:text="@string/log_btn"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/log_btn_new_WG"
                android:text="@string/log_btn_new_WG"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

</android.support.constraint.ConstraintLayout>